tree-optimization/107896 - allow v2si to dimode unpacks

The following avoids ICEing for V2SI -> DImode vec_unpacks_lo.

	PR tree-optimization/107896
	* tree-vect-stmts.cc (supportable_widening_operation):
	Handle non-vector mode intermediate mode.