gcc/tree-vect-stmts.cc
@@ -12194,9 +12194,8 @@ supportable_widening_operation (vec_info *vinfo,
       if (VECTOR_BOOLEAN_TYPE_P (prev_type))
 	intermediate_type
 	  = vect_halve_mask_nunits (prev_type, intermediate_mode);
-      else
+      else if (VECTOR_MODE_P (intermediate_mode))
 	{
-	  gcc_assert (VECTOR_MODE_P (intermediate_mode));
 	  tree intermediate_element_type
 	    = lang_hooks.types.type_for_mode (GET_MODE_INNER (intermediate_mode),
 					      TYPE_UNSIGNED (prev_type));
@@ -12204,6 +12203,10 @@ supportable_widening_operation (vec_info *vinfo,
 	    = build_vector_type_for_mode (intermediate_element_type,
 					  intermediate_mode);
 	}
+      else
+	intermediate_type
+	  = lang_hooks.types.type_for_mode (intermediate_mode,
+					    TYPE_UNSIGNED (prev_type));
 
       if (VECTOR_BOOLEAN_TYPE_P (intermediate_type)
 	  && VECTOR_BOOLEAN_TYPE_P (prev_type)
